--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -146,8 +146,37 @@ and (max-width : 700px) {
 }
 
 @media only screen 
-and (min-width : 320px) 
-and (max-width : 480px) {
+and (max-width : 320px)  {
+
+		#search {
+			margin-top: 3.1em;
+			left: 4%;
+			text-align: center;
+			font-size: 90%;
+			position: relative;
+			top: -20px;
+		}
+
+		#search #submit-search {
+			left: 83%;
+			margin-top: 2.3em;
+		}
+
+		#search #searchform #q_title_cont {
+			left: -20px;
+			position: relative;
+		}
+	
+		#search #searchmenu {
+			font-size: 75%;
+			left: 10%;
+			position: absolute;
+			top: 6em;
+		}
+
+		#search #searchextended {
+			text-align: left;
+		}
 }
 
 /* iPhone 4 ----------- */
