preparing about page

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -17,13 +17,13 @@
   <div class="subcol1">
     <h2><%=h t("title.startpage.weHave") %></h2>
     <div id="holder-offers" class="block ui-corner-all">
-      <%= render :partial => "share/items_needed_offered", :locals => {:resources => @resources_offered, :itemTypes => @itemTypes, :need => 0 } %>
+      <%# render :partial => "share/items_needed_offered", :locals => {:resources => @resources_offered, :itemTypes => @itemTypes, :need => 0 } %>
     </div>
   </div>
   <div class="subcol2">
     <h2><%=h t("title.startpage.weNeed") %></h2>
     <div id="holder-needs" class="block ui-corner-all">
-      <%= render :partial => "share/items_needed_offered", :locals => {:resources => @resources_needed, :itemTypes => @itemTypes, :need => 1 } %>
+      <%# render :partial => "share/items_needed_offered", :locals => {:resources => @resources_needed, :itemTypes => @itemTypes, :need => 1 } %>
     </div>
   </div>
   <div class="clearfix"></div>
