--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -1,2 +1,6 @@
+<h1><%= t("invitations.inviteYourFriends") %></h1>
+<p>
+Please choose your mail provider or just use your own email-adresses. 	
+</p>
 <%= render 'form' %>
 
