preparations for styling footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -99,6 +99,9 @@
     <%= "Rendered in #{rendering_time} seconds" %>
     -->
     <div id="footernavigation">
+			<ul>
+				<li><a href="#">testlink</a></li>
+			</ul>
        <!-- gmaps4rails -->
        <%= yield :scripts %>
     </div>
