--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -148,6 +148,14 @@ and (max-width : 700px) {
 @media only screen 
 and (max-width : 320px)  {
 
+		.socialcount > li {
+			padding: 0px;
+		}
+	
+		.social-icon {
+			background-size: 89px !important;
+		}
+
 		#search {
 			margin-top: 3.1em;
 			left: 4%;
