--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,7 +1,8 @@
 <% content_for(:head) do %>
-  <%= javascript_include_tag "/assets/jquery.qrcode.js" %>
-  <%= javascript_include_tag "/assets/qrcode.js" %>
+  <%# javascript_include_tag "/assets/jquery.qrcode.js" %>
+  <%# javascript_include_tag "/assets/qrcode.js" %>
   <script type="text/javascript">
+	/*
     $(document).ready(function (){
       $('#qrcode').qrcode({
         width: 128,
@@ -9,12 +10,16 @@
         text    : "<%= request.url %>"
       });
     });
+	*/
   </script>
 <% end %>
 <div id="col1">
   <%= render :partial => "items/itemtype", :locals => { :item => @item } %>
   <h1><%=h @item.title %></h1>         
   <%= render :partial => "items/itemmenu", :locals => { :item => @item } %>
+	<div class="float-right">
+		<%= render :partial => "share/social", :locals => { :thing => @item } %>
+  </div>
   <%= render :partial => "share/images", :locals => {:images => @item.images} %>
   <% if @item.status %>
     <div class="left box ui-corner-all font-small">
@@ -54,8 +59,7 @@
       <% end %>
     </div>
   <% end %>
-	<%= render :partial => "share/social", :locals => { :thing => @item } %>
-  <div class="box ui-corner-all tags">
+	<div class="box ui-corner-all tags">
     <%= render :partial => "share/tags", :locals => { :tags => @item.tags, :model => :items } %>
     <% if @item.description %>
       <%= markdown(@item.description) %>
