registration notification description updates

--- a/app/views/user_mailer/registration_notification.html.erb
+++ b/app/views/user_mailer/registration_notification.html.erb
@@ -14,14 +14,14 @@
 			<p>
 				<b>Erzähle ein bisschen über dich</b>
 				In deinem Profil kannst du deine Ziele, Wünsche und Interessen beschreiben.<br />
-				Außerdem kannst du deinen persönlichen Daten (Adresse, Telefonnummer,...) angeben.
+				Außerdem kannst du deine persönlichen Daten (Adresse, Telefonnummer,...) angeben.
 			</p>
 			<p>
 				<b>Lege Ressourcen an</b><br />
 				Du kannst Ressourcen anbieten und anfragen. Das können Güter, Dienste, Transporte, Plätze, Fähigkeiten und Wissen sein.
 			</p>
 			<p>
-				<b>Lade Freunde ein</b><br />
+				<b>Lade Freunde, Familie, Bekannte oder Kollegen ein</b><br />
 				Du kannst über deinen Mail-Account Einladungen verschicken oder auf Twitter und Facebook deine Ressourcen bekannt machen.
 			</p>	
 			") %>      
@@ -41,14 +41,14 @@
 			<p>
 				<b>Tell us something about you</b>
 				In your profile you can describe your aims, wishes and interests.<br />
-				Also add your personal data.
+				Your can also add your personal data.
 			</p>
 			<p>
 				<b>Request and offer resources</b><br />
 				Resources can be goods, services, transports, sharingpoints, skills and knowledge.
 			</p>
 			<p>
-				<b>Invite friends</b><br />
+				<b>Invite friends, family or colleagues</b><br />
 				You can invite your friends with your email-Accounts or you can post your resources on twitter or facebook.
 			</p>	
       ") %>
