--- a/app/views/user_mailer/registration_notification.html.erb
+++ b/app/views/user_mailer/registration_notification.html.erb
@@ -26,7 +26,7 @@
 			</p>	
 			") %>      
 			<p>
-        Logg' Dich hier ein: <a href="<%= @url %>"><%= @url %></a>.
+        Logg' dich hier ein: <a href="<%= @url %>"><%= @url %></a>.
       </p>
       <%= raw("<p>Danke, dass Du dabei bist und hab' noch einen sch&ouml;nen Tag!</p>") %>
     <% end %>                    
