--- a/app/assets/stylesheets/global/forms.css
+++ b/app/assets/stylesheets/global/forms.css
@@ -43,6 +43,7 @@ fieldset {
 
 .loginform {
   width: 80%;  
+	max-width: 650px;
   margin-left:auto !important;
   margin-right:auto !important;
   margin-top: 4em;
