localized invitations-button on users profile

--- a/app/assets/stylesheets/global/links.css
+++ b/app/assets/stylesheets/global/links.css
@@ -83,6 +83,14 @@ li.button {
 	background-position: 7px 8px;
   background-repeat: no-repeat;
 }
+.invite a {
+  padding:0.5em;
+  padding-left:2em;
+  background-image: url("/assets/icons/icon_invitation.png");
+	background-position: 7px 8px;
+  background-repeat: no-repeat;
+
+}
 .edit a:hover {
   padding:0.5em;
   padding-left:2em;
@@ -95,3 +103,7 @@ li.button {
 	background-position: 7px 8px;
 	background-repeat: no-repeat;
 }
+
+
+
+
