--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,7 @@
   <title><%= @title or t("iwyg.title") %></title>
 </head>
 <body>
+<%= yield :facebook %>
 <div id="container">
   <div id="header">
     <div id="logo">
