hide invite-button for live-testing

--- a/app/views/invitations/_form.html.erb
+++ b/app/views/invitations/_form.html.erb
@@ -19,7 +19,7 @@
 				'world'			
 			),
 			picture: 'https://www.iwyg.net/assets/iwyg_logo_new_250x250.png',			
-			link: 'https://www.iwyg.net/users/'
+			link: 'http://www.iwyg.net/'
 			});
 		}
 		</script>
