fb invite description

--- a/app/views/invitations/_form.html.erb
+++ b/app/views/invitations/_form.html.erb
@@ -11,13 +11,7 @@
 		{
 		FB.ui({ 
 			method: 'apprequests', 
-			message: 'My diaolog...',
-			name: 'My name',
-			caption: 'this is the caption',
-			description: (
-				'hello' +
-				'world'			
-			),
+			message: 'the iwyg project aims to share resources just to please yourself and others'
 			picture: 'https://www.iwyg.net/assets/iwyg_logo_new_250x250.png',			
 			link: 'http://www.iwyg.net/'
 			});
