--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,7 +101,9 @@
     -->
     <div id="footernavigation">
 			<ul>
-				<li><a href="#">testlink</a></li>
+				<li><a href="/imprint"><%= t("footer.imprint") %></a></li>
+				<li><a href="/agb"><%= t("footer.agb") %></a></li>
+				<li><a href="/privacypolicy"><%= t("footer.privacypolicy") %></a></li>
 			</ul>
        <!-- gmaps4rails -->
        <%= yield :scripts %>
