facebook and github added to footer

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -148,6 +148,8 @@ a#new-message:hover {
     width:100%;
     margin: 0px auto;
     text-align:center;
+		position: relative;
+		left: 4%;
 }
 #footer a {
 		padding: 0.5em;
