--- a/app/views/page/agb.html.erb
+++ b/app/views/page/agb.html.erb
@@ -1,5 +1,5 @@
 <h2>Allgemeine Geschäftsbedingungen</h2>
-<h3>1. Leistungsbeschreibung</h3>
+<br /><h3>1. Leistungsbeschreibung</h3>
 <p>
 iwyg ist ein Online-Portal, auf dem Ressourcen angeboten und angefragt werden können. Die Plattform dient dabei als Mittler zwischen Angebot und Nachfrage, besitzt jedoch keinerlei Rechte an den eingestellten Ressourcen. Die Nutzung von iwyg komplett kostenlos.
 </p>
@@ -9,12 +9,12 @@ Es dürfen von Mitgliedern nur Ressourcen eingestellt werden, die nicht gegen ge
 Das von iwyg dargestellte Angebot kann auch außerhalb Deutschlands aufgerufen werden. Der Gerichtsstand der Webseite ist Deutschland.
 iwyg hat das Recht Ressourcen eines Mitglieds oder dessen Nutzerkonto zu sperren, falls die veröffentlichten Ressourcen nicht den beschriebenen Richtlinien entsprechen oder das Mitglied bewusst täuscht.
 </p>
-<h3>2. Marken- und Bildrechte</h3>
+<br /><h3>2. Marken- und Bildrechte</h3>
 <p>
 iwyg übernimmt keinerlei Haftung für die wissentliche oder unwissentliche Verletzung von Marken-, Bild- oder Urheberrechten. Sollte dennoch ein Schaden durch die unberechtigte Veröffentlichung einer Ressource oder eines Bildes entstehen sind jegliche Ansprüche direkt bei dem Verursache geltend zu machen.
 iwyg prüft eingestellte Bilder nicht auf Qualität oder Inhalt.
 </p>
-<h3>3. Anmeldung</h3>
+<br /><h3>3. Anmeldung</h3>
 <p>
 Die von iwyg bereitgestellten technischen Dienste können nur mit einer Mitglieder-Anmeldung in vollen Umfang genutzt werden. Durch die Eröffnung eines Mitgliedskontos stimmt der Nutzer den Allgemeinen Geschäftsbedingungen zu. Dies gilt auch, wenn er das Lesen der AGBs vor Fertigstellung der Anmeldung nicht bestätigt hat.
 Die von Anmeldung bei iwyg oder das Nutzen der Dienste von iwyg ist kostenfrei. Kosten können jedoch beim Austausch einer Ressource vom Anbieter zum Anfragenden entstehen. iwyg hat keinerlei Einfluss auf die Kostenstruktur der Portalmitglieder und ist auch nicht daran beteiligt.
@@ -25,19 +25,19 @@ Inaktive Nutzerkonten können nach dreifacher unbeantworteter Kontaktaufnahme du
 <p>
 Die Kündigung der Mitgliedschaft bei iwyg ist zu jederzeit möglich und führt zur Löschung des Nutzerkontos. Die gelöschten Daten können zu einem späteren Zeitpunkt nicht wieder hergestellte werden.
 </p>
-<h3>4. Ressourcen</h3>
+<br /><h3>4. Ressourcen</h3>
 <p>
 Um die auf iwyg eingestellten Ressourcen möglichst gut durch andere Mitglieder und Besucher bewerten zu können, muss die Ressource nach besten Wissen und Gewissen beschrieben werden. Vorsätzliche Täuschung führt zur Strafanzeige und zum Rauswurf bei iwyg.
 iwyg hat keinerlei Einfluss darauf, wer die angebotenen Ressourcen erhält. Die Auswahl findet völlig autark durch den Anbieter statt.
 Grundlegend ist es möglich, eine erwünschte Gegenleistung für eine angebotene Ressource einzufordern. 
 Diese Gegenleistung sollte jedoch vermieden werden, da Ressourcen selbstlos angeboten werden.
 </p>
-<h3>5. Störungen und technischer Betrieb</h3>
+<br /><h3>5. Störungen und technischer Betrieb</h3>
 <p>
 iwyg ist auf einem gemieteten Server gehostet. Sollte es zu Einschränkungen der Erreichbarkeit von iwyg kommen, ist dies durch den Nutzer hinzunehmen. Ein Anspruch auf Schadensersatz durch etwaige Einschränkungen besteht nicht.
 Mitgliedern oder Besuchern ist es nicht gestattet Automatismen oder andere Techniken einzusetzen, um die auf iwyg angebotenen Dienste automatisiert zu nutzen. Darunter fallen zum Beispiel das automatisierte Einstellen von Ressourcen oder Schreiben von Anfragen, Kommentaren und Nachrichten.
 </p>
-<h3>6. Änderung dieser AGB, Salvatorische Klausel</h3>
+<br /><h3>6. Änderung dieser AGB, Salvatorische Klausel</h3>
 <p>
 iwyg behält sich vor, diese Allgemeinen Geschäftsbedingungen jederzeit und ohne Nennung von Gründen zu ändern. Die geänderten Bedingungen werden den Mitgliedern per E-Mail spätestens zwei Wochen vor ihrem Inkrafttreten zugesendet. Widerspricht ein Mitglied der Geltung der neuen Allgemeinen Geschäftsbedingungen nicht innerhalb von zwei Wochen nach Empfang der E-Mail, gelten die geänderten Allgemeinen Geschäftsbedingungen als angenommen.
 Sofern eine Bestimmung dieser Allgemeinen Geschäftsbedingungen unwirksam ist, bleiben die übrigen Bestimmungen davon unberührt. Die unwirksame Bestimmung gilt als durch eine solche ersetzt, die dem Sinn und Zweck der unwirksamen Bestimmung in rechtswirksamer Weise wirtschaftlich am nächsten kommt. Gleiches gilt für eventuelle Regelungslücken.
