--- a/app/views/page/imprint.html.erb
+++ b/app/views/page/imprint.html.erb
@@ -1,9 +1,9 @@
 <h2>Impressum</h2>
 <p>
-Christian Grlica
+Christian Grlica<br />
 christian@iwyg.net
 </p>
-<br /><br />
+<br />
 <h2>Kontakt</h2>
 <p>
 web: www.iwyg.net<br />
@@ -11,7 +11,6 @@ mail: info@iwyg.net<br />
 </p>
 <br />
 <h2>Haftungsausschluss</h2>
-<br />
 <br /><h3>Haftung für Inhalte</h3>
 <p>
 Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
