--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,11 +95,14 @@
   </div>
   <div id="footer">
 		<div id="footernavigation">
-			<ul>
+			<ul class="horizontal">
 				<li><a href="/imprint"><%= t("title.footer.imprint") %></a></li>
 				<li><a href="/agb"><%= t("title.footer.tos") %></a></li>
 				<li><a href="/privacypolicy"><%= t("title.footer.privacypolicy") %></a></li>
-				<li><a href="http://www.github.com/heaven7/iwyg" title="<%= t("title.footer.github") %>" target="_blank"><img src="/assets/icons/social/github.png" /></a>
+				<li><a href="https://www.transifex.com/projects/p/iwyg/" target="_blank"><%= t("title.footer.helptotranslate") %></a></li>
+			</ul>
+			<ul class="horizontal">
+				<li><a href="http://www.github.com/heaven7/iwyg" title="<%= t("title.footer.github") %>" target="_blank"><img src="/assets/icons/social/github.png" /></a>						
 				<li><a href="http://www.facebook.com/iwantyouget" title="<%= t("title.footer.facebook") %>" target="_blank"><img src="/assets/icons/social/facebook.png" /></a>
 			</ul>
     </div>
