--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -21,6 +21,13 @@ and (max-width : 1024px) {
 
 @media only screen 
 and (max-width : 830px) {
+
+	#languages {
+		margin-top: 0px;
+		position: relative;
+		top: -20px;
+		left: 87%;
+	}
 	
 	.ui-listbuilder-items {
 		overflow: shown !important;
