--- a/app/views/page/agb.html.erb
+++ b/app/views/page/agb.html.erb
@@ -1,7 +1,7 @@
 <h2>Allgemeine Geschäftsbedingungen</h2>
 <br /><h3>1. Leistungsbeschreibung</h3>
 <p>
-iwyg ist ein Online-Portal, auf dem Ressourcen angeboten und angefragt werden können. Die Plattform dient dabei als Mittler zwischen Angebot und Nachfrage, besitzt jedoch keinerlei Rechte an den eingestellten Ressourcen. Die Nutzung von iwyg komplett kostenlos.
+iwyg ist ein Online-Portal, auf dem Ressourcen angeboten und angefragt werden können. Die Plattform dient dabei als Mittler zwischen Angebot und Nachfrage, besitzt jedoch keinerlei Rechte an den eingestellten Ressourcen. Die Nutzung von iwyg ist komplett kostenlos.
 </p>
 <p>
 iwyg bietet Mitgliedern die technische Möglichkeit Ressourcen auf iwyg und damit im Internet zu veröffentlichen. Die eingestellten Ressourcen werden durch iwyg nicht geprüft und stellen in keiner Weise die Meinung von iwyg dar. 
