--- a/app/views/page/index.de.html.erb
+++ b/app/views/page/index.de.html.erb
@@ -20,7 +20,7 @@
 			</h3>
 			<ul>
 				<li>&raquo; um zu helfen.</li>
-				<li>&raquo; um zu kreiren.</li>
+				<li>&raquo; um zu kreieren.</li>
 				<li>&raquo; um zu wachsen.</li>
 				<li>&raquo; um voneinander zu lernen.</li>
 			</ul>
