--- a/app/views/page/agb.html.erb
+++ b/app/views/page/agb.html.erb
@@ -11,7 +11,7 @@ iwyg hat das Recht Ressourcen eines Mitglieds oder dessen Nutzerkonto zu sperren
 </p>
 <br /><h3>2. Marken- und Bildrechte</h3>
 <p>
-iwyg übernimmt keinerlei Haftung für die wissentliche oder unwissentliche Verletzung von Marken-, Bild- oder Urheberrechten. Sollte dennoch ein Schaden durch die unberechtigte Veröffentlichung einer Ressource oder eines Bildes entstehen sind jegliche Ansprüche direkt bei dem Verursache geltend zu machen.
+iwyg übernimmt keinerlei Haftung für die wissentliche oder unwissentliche Verletzung von Marken-, Bild- oder Urheberrechten. Sollte dennoch ein Schaden durch die unberechtigte Veröffentlichung einer Ressource oder eines Bildes entstehen sind jegliche Ansprüche direkt bei dem Verursacher geltend zu machen.
 iwyg prüft eingestellte Bilder nicht auf Qualität oder Inhalt.
 </p>
 <br /><h3>3. Anmeldung</h3>
@@ -23,7 +23,7 @@ Mitglieder haften grundsätzlich für sämtliche Aktivitäten, die unter Verwend
 Inaktive Nutzerkonten können nach dreifacher unbeantworteter Kontaktaufnahme durch iwyg gelöscht werden.
 </p>
 <p>
-Die Kündigung der Mitgliedschaft bei iwyg ist zu jederzeit möglich und führt zur Löschung des Nutzerkontos. Die gelöschten Daten können zu einem späteren Zeitpunkt nicht wieder hergestellte werden.
+Die Kündigung der Mitgliedschaft bei iwyg ist zu jederzeit möglich und führt zur Löschung des Nutzerkontos. Die gelöschten Daten können zu einem späteren Zeitpunkt nicht wieder hergestellt werden.
 </p>
 <br /><h3>4. Ressourcen</h3>
 <p>
