--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta http-equiv="imagetoolbar" content="no">
+	<meta http-equiv="imagetoolbar" content="no" />
 
   <%= csrf_meta_tag %>
   
@@ -101,14 +101,13 @@
 				<li><a href="https://www.transifex.com/projects/p/iwyg/" target="_blank"><%= t("title.footer.helptotranslate") %></a></li>
 			</ul>
 			<ul class="horizontal">
-				<li><a href="http://www.github.com/heaven7/iwyg" title="<%= t("title.footer.github") %>" alt="<%= t("title.footer.github") %>" target="_blank"><img src="/assets/icons/social/github.png" /></a>						
-				<li><a href="http://www.facebook.com/iwantyouget" title="<%= t("title.footer.facebook") %>" alt="<%= t("title.footer.facebook") %>" target="_blank"><img src="/assets/icons/social/facebook.png" /></a>
+				<li><a href="http://www.github.com/heaven7/iwyg" title="<%= t("title.footer.github") %>" target="_blank"><img src="/assets/icons/social/github.png" alt="<%= t("title.footer.github") %>" /></a>						
+				<li><a href="http://www.facebook.com/iwantyouget" title="<%= t("title.footer.facebook") %>" target="_blank"><img src="/assets/icons/social/facebook.png" alt="<%= t("title.footer.facebook") %>" /></a>
 			</ul>
 		  <%= render :partial => 'share/languages' %>
     </div>
        <!-- gmaps4rails -->
        <%= yield :scripts %>
-    </div>
   </div>
 </div>
 <% if ENV["RAILS_ENV"] != "production" %>
