--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -22,7 +22,7 @@
       <span class="left">
 				<%= render :partial => "itemowner", :locals => { :item => item } %>			
 			</span>   
-				<span class="date right"><%= showDistanceOfSearcher(item) %></span>
+				<span class="date right"><%= showDistanceOfSearcher(item) %> km</span>
 
     </div>
 </div>
