--- a/app/views/share/search/_search.html.erb
+++ b/app/views/share/search/_search.html.erb
@@ -8,13 +8,13 @@
       <% end %>
       
       <%= f.text_field :title_cont, :size => "15"  %>
-      <input id="near" name="near" size="15" type="text" class="ui-corner-all" value="<%= params[:near] || @near %>">
+      <input id="near" name="near" size="15" type="text" class="ui-corner-all" value="<%= @near %>">
       <div id="searchextended" class="ui-corner-all">
         <h3 class="bold"></h3>
         <table>
 					<tr>
 						<td class="label">Radius</td>
-      			<td class="row-big"><input id="within" name="within" size="15" type="text" class="ui-corner-all"></td>
+      			<td class="row-big"><input id="within" name="within" size="15" type="text" class="ui-corner-all" value="<%= @within %>"></td>
 					</tr>
           <tr>
             <td class="label"><%= t("resources.available").html_safe %><br /> (<%= t("from") %> - <%= t("till") %>)</td>
