distances shown when available

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -22,7 +22,7 @@
       <span class="left">
 				<%= render :partial => "itemowner", :locals => { :item => item } %>			
 			</span>   
-				<span class="distance right"><a href="#" title="<%= t("distance") %>: <%= showDistanceOfSearcher(item) %>"><%= showDistanceOfSearcher(item) %></a></span>
+				<span class="distance right"><a href="javascript: return false;" title="<%= t("distance") %>: <%= showDistanceOfSearcher(item) %>"><%= showDistanceOfSearcher(item) %></a></span>
 
     </div>
 </div>
