--- a/app/assets/stylesheets/global/items.css
+++ b/app/assets/stylesheets/global/items.css
@@ -33,6 +33,9 @@
 .item-bottom .distance {
 	display: block;
 }
+.item-bottom .distance:hover {
+	cursor: default;
+}
 #items-related {
 
 }                   
