search panel cosmetics

--- a/app/assets/stylesheets/global/search.css
+++ b/app/assets/stylesheets/global/search.css
@@ -1,9 +1,9 @@
 	/* Search */
 #search {
-    position:relative;
-    left:13%;
-    text-align:left;
-    padding-top:2em;
+  position:relative;
+  left: 15%;
+	text-align: left;
+	padding-top: 2.2em;
 }
 
 #search input {
@@ -13,20 +13,39 @@
     background:#EDEFDF;
 
 }
-
+#search .search-field {
+	float:left;
+	position: relative;
+	left: 0px;
+	top: -14px;
+	max-width: 141px;
+	margin-right: 0.5em;
+}
+#search .search-field #q_need_eq {
+	width: 141px;
+	padding: 0.25em;
+}
+#search label {
+	font-size:80%;
+	clear: both;
+	text-align: left;
+	position: relative;
+	left: 3px;
+}
 #advanced_search {
     display:none; /* if javascript is disabled */
 }
 #search #searchform {
     float:left;
     position:relative;
-    margin-right:0.5em;
+    margin-right:4em;
 }
 #search #submit-search {
-    position: absolute;
-    top: 10px;
-    left: 102%;
-    width: 21px;
+  position: absolute;
+	top: 11px;
+	left: 101%;
+	width: 21px;
+	padding: 0.28em;
 }
 
 #search #searchform #search_title_contains,
@@ -38,7 +57,7 @@
     margin-right:1em;
 }
 #search #searchextended {
-    margin-top:2em;
+    margin-top:3.5em;
     padding:0.5em;
     padding-left:8.5em;
     text-decoration: none;
@@ -54,7 +73,7 @@
     -webkit-text-stroke-color: rgba(0, 0, 0, 0.199219);
 }
 #search #searchextended table tr {
-    height:57px;
+    height:50px;
 }
 #search #searchextended input,
 #search #searchextended select {
@@ -76,7 +95,7 @@
 }
 #search #searchmenu {
     font-size: 70%;
-    left: -5em;
+    left: -11em;
     position: relative;
     top: 4.5em;
 }
