--- a/app/views/share/search/_search.html.erb
+++ b/app/views/share/search/_search.html.erb
@@ -1,20 +1,28 @@
 <div id="search">                              
   <div id="searchform">
     <%= search_form_for $search, :url => search_items_path, :html => {:method => :post} do |f| %>
-      <% if params[:q] && params[:q][:need_eq] %>
-        <%= f.select :need_eq, options_for_select([ [], [t("title.resources.iNeed"), 0], [t("title.resources.iHave"), 1]], :selected => params[:q][:need_eq]) %> 
-      <% else %>
-        <%= f.select :need_eq, options_for_select([ [], [t("title.resources.iNeed"), 0], [t("title.resources.iHave"), 1]]) %> 
-      <% end %>
-      
-      <%= f.text_field :title_cont, :size => "15"  %>
-      <input id="near" name="near" size="15" type="text" class="ui-corner-all" value="<%= @near %>">
+			<div class="search-field">			
+				<label><%= t("what") %></label>
+		    <% if params[:q] && params[:q][:need_eq] %>
+		      <%= f.select :need_eq, options_for_select([ [], [t("title.resources.iNeed"), 0], [t("title.resources.iHave"), 1]], :selected => params[:q][:need_eq]), :size => "15" %> 
+		    <% else %>
+		      <%= f.select :need_eq, options_for_select([ [], [t("title.resources.iNeed"), 0], [t("title.resources.iHave"), 1]]), :size => "15" %> 
+		    <% end %>
+			</div>
+      <div class="search-field">			
+				<label><%= t("whatexactly") %></label>
+      	<%= f.text_field :title_cont, :size => "15"  %>
+			</div>
+      <div class="search-field">			      
+				<label><%= t("where") %></label>
+		    <input id="near" name="near" size="15" type="text" class="ui-corner-all" value="<%= @near %>">
+      </div>
       <div id="searchextended" class="ui-corner-all">
         <h3 class="bold"></h3>
         <table>
 					<tr>
-						<td class="label">Radius</td>
-      			<td class="row-big"><input id="within" name="within" size="15" type="text" class="ui-corner-all" value="<%= @within %>"></td>
+						<td class="label">Suchradius (km)</td>
+      			<td class="row-big"><input id="within" name="within" size="8" type="text" class="ui-corner-all" value="<%= @within %>"></td>
 					</tr>
           <tr>
             <td class="label"><%= t("resources.available").html_safe %><br /> (<%= t("from") %> - <%= t("till") %>)</td>
