--- a/app/views/share/search/_search.html.erb
+++ b/app/views/share/search/_search.html.erb
@@ -21,7 +21,7 @@
         <h3 class="bold"></h3>
         <table>
 					<tr>
-						<td class="label">Suchradius (km)</td>
+						<td class="label"><%= t("searchradius") %></td>
       			<td class="row-big"><input id="within" name="within" size="8" type="text" class="ui-corner-all" value="<%= @within %>"></td>
 					</tr>
           <tr>
