--- a/app/assets/stylesheets/global/search.css
+++ b/app/assets/stylesheets/global/search.css
@@ -31,6 +31,7 @@
 	text-align: left;
 	position: relative;
 	left: 3px;
+	color: white;
 }
 #advanced_search {
     display:none; /* if javascript is disabled */
